Se añade validación de registro y consumo de backend customer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,11 @@
     <string name="btnLogin">Ingresar</string>
     <string name="message">No tienes una cuenta?</string>
     <string name="enlace">Crear Cuenta</string>
+    <!-- Activity Register-->
+    <string name="register">Registro</string>
+    <string name="name">Nombres</string>
+    <string name="lastName">Apellidos</string>
+    <string name="dni">DNI</string>
+    <string name="phone">Celular</string>
+    <string name="btnRegister">Registrar</string>
 </resources>
